@@ -4,10 +4,17 @@ package com.unascribed.fabrication.mixin.f_balance.broken_tools_drop_components;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 
 import com.unascribed.fabrication.FabConf;
 import com.unascribed.fabrication.support.injection.FabInject;
+import it.unimi.dsi.fastutil.objects.Object2IntMap;
+import net.minecraft.component.DataComponentTypes;
+import net.minecraft.component.type.NbtComponent;
+import net.minecraft.enchantment.Enchantments;
 import net.minecraft.registry.Registries;
+import net.minecraft.registry.RegistryKeys;
+import net.minecraft.registry.entry.RegistryEntry;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.Unique;
 import org.spongepowered.asm.mixin.injection.At;
@@ -59,10 +66,12 @@ public abstract class MixinLivingEntity extends Entity {
 	private void shatter(EquipmentSlot slot, ItemStack stack) {
 		if (!FabConf.isEnabled("*.broken_tools_drop_components")) return;
 		Item item = stack.getItem();
-		if (LoaderGearComponents.ignoreVanishing && EnchantmentHelper.hasVanishingCurse(stack)) return;
-		if (stack.hasNbt() && stack.getNbt().getBoolean("fabrication:ShatteredAlready")) return;
-		if (!stack.hasNbt()) stack.setNbt(new NbtCompound());
-		stack.getNbt().putBoolean("fabrication:ShatteredAlready", true);
+		Optional<RegistryEntry.Reference<Enchantment>> vanishing = this.getRegistryManager().get(RegistryKeys.ENCHANTMENT).getEntry(Enchantments.VANISHING_CURSE);
+		if (LoaderGearComponents.ignoreVanishing && (vanishing.isEmpty() || stack.getEnchantments().getEnchantments().contains(vanishing.get()))) return;
+		if (stack.contains(DataComponentTypes.CUSTOM_DATA) && stack.get(DataComponentTypes.CUSTOM_DATA).getNbt().getBoolean("fabrication:ShatteredAlready")) return;
+		NbtCompound nbt = stack.getOrDefault(DataComponentTypes.CUSTOM_DATA, NbtComponent.DEFAULT).copyNbt();
+		nbt.putBoolean("fabrication:ShatteredAlready", true);
+		stack.set(DataComponentTypes.CUSTOM_DATA, NbtComponent.of(nbt));
 		List<ItemStack> enchantables = Lists.newArrayList();
 		for (ItemMaterialValue imv : LoaderGearComponents.items.get(Resolvable.mapKey(Registries.ITEM.getId(item), Registries.ITEM))) {
 			double dropChance = 1;
@@ -130,10 +139,10 @@ public abstract class MixinLivingEntity extends Entity {
 			}
 		}
 		if (enchantables.size() == 1) {
-			EnchantmentHelper.set(EnchantmentHelper.get(stack), enchantables.get(0));
+			EnchantmentHelper.set(stack, enchantables.getFirst().getEnchantments());
 		} else if (!enchantables.isEmpty()) {
-			for (Map.Entry<Enchantment, Integer> en : EnchantmentHelper.get(stack).entrySet()) {
-				int lvl = en.getValue();
+			for (Object2IntMap.Entry<RegistryEntry<Enchantment>> en : stack.getEnchantments().getEnchantmentEntries()) {
+				int lvl = en.getIntValue();
 				int[] values;
 				if (lvl == 1 || getWorld().random.nextInt(3) == 0) {
 					values = new int[] {lvl};
